webAO/styles/classic.css
body {
	font-family: "Ace Attorney", "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", "Osaka", "MS Gothic", "ＭＳ Ｐゴシック", "Tahoma", Sans;
}

img {
	image-rendering: -moz-crisp-edges;
	image-rendering: -o-crisp-edges;
	image-rendering: -webkit-optimize-contrast;
	image-rendering: crisp-edges;
	-ms-interpolation-mode: nearest-neighbor;
}

#client_chatcontainer {
	filter:none;
}

#client_name {
	display: none;
	padding: 0 6px;
	height: 5%;
	min-width: 3.25em;
	text-justify: distribute;
	letter-spacing: 1px;
	outline: 1px solid rgb(255, 255, 255, 0.5);
	border: rgb(33, 33, 33, 0.5) solid 1px;
	background: rgb(56, 56, 163, 0.5);
	box-shadow: 1px 1px rgb(0, 56, 163, 0.5) inset;
	left: 1px;
	top: 60.93%;
	border-radius: 3px;
	-moz-outline-radius: 3px;
	outline-radius: 3px;
	position: absolute;
	z-index: 1;
}

#client_chat {
	font-size: 1em;
	display: none;
	width: 98%;
	width: calc(100% - 4px);
	margin: auto;
	height: 32.3%;
	border: rgb(255, 255, 255, 0.5) solid 2px;
	background-color: rgb(0, 0, 0, 0.5);
	top: 66.5%;
	border-radius: 4px;
	position: absolute;
	word-break: keep-all;
	overflow-wrap: break-word;
	text-align: left;
	overflow: hidden;
	scroll-behavior: smooth;
}

#client_chat p {
	padding: 1.4% 3.13%;
	color: white;
	margin: 1px;
	letter-spacing: 0.4%;
	line-height: 90%;
}

#client_chatwaiting {
	display: block;
	right: -6px;
	bottom: 0.24em;
	width: 1em;
	position: absolute;
	animation: idling 0.4s linear infinite;
}

@keyframes idling {
	0% {
		right: -4px;
	}

	50% {
		right: -8px;
	}

	100% {
		right: -4px;
	}
}

#evi_name {
	background-color: #393939;
	color: #ffad18;
}

#evi_desc {
	flex: 1 auto;
	background-color: #9cc694;
}

#client_menu {
	background-color: #5a5a5a;
	overflow-y: auto;
	height: 100%;
}

#client_menu:after {
	position: absolute;
	content: "";
	pointer-events: none;
	background: repeating-linear-gradient(transparent, transparent 3px, rgb(255, 255, 255, 0.2) 3px, rgb(255, 255, 255, 0.2) 4px);
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	opacity: 0.5;
}

.menu_content {
	background-color: #847342;
}

.client_button {
	min-width: 6em;
	margin: 1px;
	padding: 6px 2px;
	clip-path: polygon(75% 0, 100% 50%, 100% 100%, 0 100%, 0 50%, 25% 0);
	cursor: pointer;
	text-align: center;
	color: white;
	background-color: #7b2900;
	text-shadow: 0 0 4px #000;
	border: #000 solid 1px;
}

